--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: 양희태 (Yang Hee Tae)
-title: Back-End Developer
+title: Java Back-End Developer
 email: yangheetae0827@naver.com
 # email_title: Email (Email title override)
 website: https://computerstorage.tistory.com/
@@ -34,12 +34,14 @@ github_username: yht0827
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   나이 : 31 세 (1992년 생)
-  최종 학력 : 가톨릭 대학교
+  최종 학력 : 가톨릭 대학교 정보통신전자공학 (졸업)
   자격증 : <mark>정보처리기사</mark>
   사용 기술 : <mark>Java</mark> <mark>Spring</mark> <mark>JavaScript</mark> <mark>Node</mark>
   <mark>Back-end</mark> 개발 업무를 하고 있습니다.
-  유지 보수하기 쉽고, 지속적으로 성장 가능한 소프트웨어에 관심이 많습니다. 때문에 테스트 작성을 중요하게 생각하고 있으며 
-  현재 테스트 코드 도입을 위해 새로운 프로젝트 진행시 테스트 코드 작성을 병행하며 개발하고 있습니다.
+  안녕하세요! 백엔드 개발자 양희태 입니다.
+  개발을 통해 성취감을 얻는 것을 좋아합니다.
+  꾸준한 노력을 통해 끊임없는 성장을 하고 싶습니다.
+  테스트 작성을 중요하게 생각하게 생각하고 있습니다.
 
 content:
   - title: Projects # Title for the section
