--- a/_config.yml
+++ b/_config.yml
@@ -92,12 +92,9 @@ content:
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
           Description of qualification
-  - title: A Little More About Me
-    layout: text
+  - title: 그 밖의 활동
     content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+      - [개인 블로그](https://computerstorage.tistory.com/)
 
 # Footer
 footer_show_references: true
