--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   최종 학력 : 가톨릭 대학교 정보통신전자공학 (졸업)
   
-  자격증 : <mark>정보처리기사</mark>
+  자격증 : <mark>정보보안기사</mark> <mark>정보처리기사</mark> <mark>SQLD</mark> <mark>CSTS</mark>
   
   사용 기술 : <mark>Java</mark> <mark>Spring</mark> <mark>JavaScript</mark> <mark>Node</mark>
   
