--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ content:
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
           Description of qualification
-  - title: 그 밖의 활동
+  - title: 그 밖에 활동
     layout: text
     content: | # this will include new lines to allow paragraphs
       - [개인 블로그](https://computerstorage.tistory.com/)
