--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   나이 : 31 세 (1992년 생)
   
-  최종 학력 : 가톨릭 대학교 정보통신전자공학 (졸업)
+  최종 학력 : 가톨릭대학교 (졸업)
   
   자격증 : <mark>정보보안기사</mark> <mark>정보처리기사</mark> <mark>SQLD</mark> <mark>CSTS</mark>
   
