--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ content:
         additional_links:
           - title:  Github page for project (eg. sproogen/modern-resume-theme)
             icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+            url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
