--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,8 @@ content:
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
           Description of qualification
-  - more_title: 그 밖에 활동
-    more_content: | # this will include new lines to allow paragraphs
+more_title: 그 밖에 활동
+more_content: | # this will include new lines to allow paragraphs
       - [개인 블로그](https://computerstorage.tistory.com/)  
 
 # Footer
