--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   dates: 2021.03 ~
   qualification: 데이터 사이언스 과정(재학)
   quote: >
-    서울 소재 대학교
+    서울 소재 대학원
   description: | # this will include new lines to allow paragraphs
 - layout: left
   name: 가톨릭대학교
