--- a/_data/introduce.yml
+++ b/_data/introduce.yml
@@ -1,6 +1,6 @@
 - layout: right
-  image: images/landscape-trees.jpg
+  image: images/git.jpg
   quote: >
-  장 / 단점
+    장 / 단점
   description: |
     저의 가장 큰 장점은 <Mark>집요함</Mark>입니다.
