--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Experience template
 - layout: left
-  company: Company name
+  company: 안랩
   link: Link to company (optional)
   job_title: Job title
   dates: Date Range (eg. November 2016 - present)
