--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,9 +2,9 @@
 - layout: left
   company: 안랩
   link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  job_title: <mark>Java</mark> <mark>Spring</mark> 백엔드 개발자 / 연구원
+  dates: 2020.01.06 ~
   quote: >
-   Short description of the company (optional)
+
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    - 백엔드 개발
