--- a/_data/toyproject.yml
+++ b/_data/toyproject.yml
@@ -1,7 +1,7 @@
 
 - layout: top-middle
   name: 블록 체인 기반 자격증 관리 플랫폼
-  link: [링크](https://github.com/yht0827/JobSearchPlatform)
+  link: https://github.com/yht0827/JobSearchPlatform
   quote: >
    한이음 멘토링 프로젝트
   description: | # this will include new lines to allow paragraphs
