--- a/_data/toyproject.yml
+++ b/_data/toyproject.yml
@@ -1,5 +1,5 @@
 
-- layout: top-middle
+- layout: left
   name: 블록 체인 기반 자격증 관리 플랫폼
   link: https://github.com/yht0827/JobSearchPlatform
   quote: >
