--- a/_data/toyproject.yml
+++ b/_data/toyproject.yml
@@ -4,7 +4,7 @@
   quote: >
    한이음 멘토링 프로젝트
   description: | # this will include new lines to allow paragraphs
-    - 사용기술 :  <mark>HyperLedger</mark> <mark>React</mark> <mark>Redux</mark> [Hyperledger Fabric](https://img.shields.io/badge/Hyperledger_Fabric-1.4.1-orange.svg)
+    - 사용기술 :  <mark>HyperLedger</mark> <mark>React</mark> <mark>Redux</mark>
     - HyperLedger Fabric 블록체인 네트워크로 자격증 관리 플랫폼 구축
     - Playground를 활용하여 체인코드 생성(Query, script, acl, model)
     - React를 사용하여 플랫폼 웹 사이트 제작
