--- a/_data/skill.yml
+++ b/_data/skill.yml
@@ -10,4 +10,4 @@
   name: Frontend
   description: |
     * JavaScript, Jquery
-    * React.js,  HTML, CSS, FreeMarker, Kendo UI
+    * React, HTML, CSS, FreeMarker, Kendo UI
