--- a/_data/education.yml
+++ b/_data/education.yml
@@ -18,7 +18,7 @@
 - layout: left
   name: 구리 인창 고등학교
   dates: 2008.03 ~ 2011.02
-  qualification: 문과
+  qualification: 인문 계열
   quote: >
     경기도 소재 고등학교
   description: | # this will include new lines to allow paragraphs
