--- a/_data/skill.yml
+++ b/_data/skill.yml
@@ -7,6 +7,13 @@
     * IntelliJ, WebStorm, Visual Studio Code
 
 - layout: left
+  name: Infra
+  description: |
+    * Mysql, Postgresql
+    * Docker, k8s
+    * AWS, NCP
+
+- layout: left
   name: Frontend
   description: |
     * JavaScript, Jquery
