--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github_username: yht0827
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  안녕하세요! 3년차 서버 개발자로 주로 Java 언어를 사용하며 <mark>Back-end</mark> 업무를 맡아서 역할을 수행하고 있습니다. 개발을 통해 성취감을 얻는 것을 좋아합니다.
+  안녕하세요! 3년차 서버 개발자로 주로 Java 언어를 사용하며 Back-end 업무를 맡아서 역할을 수행하고 있습니다. 개발을 통해 성취감을 얻는 것을 좋아합니다.
   
   다양한 프로젝트를 통해 유지 보수하기 쉽고, 지속적으로 성장 가능한 소프트웨어에 관심이 많습니다. 때문에 테스트 작성을 중요하게 생각하고 있으며 현재 테스트 코드 도입을 위해 새로운 프로젝트 진행시 테스트 코드 작성을 병행하며 개발하고 있습니다.
   
@@ -90,14 +90,31 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
-        quote: >
-          Short institution or course description (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of qualification
+  - layout: left
+    name: 서강대학교정보통신대학원
+    dates: 2021.03 ~
+    qualification: 데이터 사이언스 과정(재학)
+    quote: >
+      서울 소재 대학원
+    description: | # this will include new lines to allow paragraphs
+  - layout: left
+    name: 가톨릭대학교
+    dates: 2012.03 ~ 2020.02
+    qualification: 정보통신전자공학, 컴퓨터공학(복수전공)
+    quote: >
+      경기도 소재 대학교
+    description: | # this will include new lines to allow paragraphs
+      - 졸업학점 : 3.68 / 4.5
+      - 2학년 2학기 : 성적 우수 장학금 수여
+      - 3학년 1학기 : 성적 우수 장학금 수여
+  - layout: left
+    name: 구리 인창 고등학교
+    dates: 2008.03 ~ 2011.02
+    qualification: 인문 계열
+    quote: >
+      경기도 소재 고등학교
+    description: | # this will include new lines to allow paragraphs
+
 more_title: Others
 more_content: | # this will include new lines to allow paragraphs
   - 한이음 멘토링 프로젝트 (2019.04 ~ 2019.12)
