--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ content:
       - layout: top-left
         title: Ahnlab
         sub_title: Software Engineer
-        caption: 2020.01.06 ~
+        caption: 2020.01.06 ~ 2022.08.31
         description: | # this will include new lines to allow paragraphs
           **<a href="https://www.ahnlab.com/kr/site/product/productView.do?prodSeq=131" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">Ahnlab AIPS (차세대 네트워크 침입방지 솔루션)</a>**
           - <mark>WebSocket</mark> <mark>stomp</mark>을 활용하여 탐지 경보 기능 개발
@@ -76,14 +76,22 @@ content:
           - Jenkins를 활용한 CI/CD 구축
 
           **<a href="https://github.com/f-lab-edu/hot-deal-moa" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">hot-deal-moa(E-commerce 핫딜 서비스)</a>**
-          - Spring Boot를 활용한 API 개발
           - Spring Rest Docs를 활용한 테스트 및 API 문서화
+          - Redis Cache를 활용하여 다중서버 로그인 세션 처리
+          - Redisson 분산락을 활용한 다중서버 환경에서의 동시성 트랜잭션 보장 처리
+          - Ngrinder를 활용한 성능 개선, 모니터링
+            - Nginx 로드밸런싱 및 서버 scale-out 테스트 3000명 기준 TPS 700대 -> 9000대로 개선
+          - QueryDsl 성능 개선
+            - No-offset 쿼리 수정을 통해 500만건 기준 850ms -> 6ms로 개선
+          - Lucene Index를 활용하여 기존 Full-Index 방식의 상품목록 검색 성능 개선
           - Github Action와 NCP를 활용한 CI/CD 구축
           
-          **<a href="https://github.com/yht0827/JobSearchPlatform" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">자격증 관리 플랫폼(job-search-platform)</a>**
-          - HyperLedger Fabric 블록체인 네트워크로 자격증 관리 플랫폼 구축
-          - Playground를 활용하여 체인코드 생성(Query, script, acl, model)
+          **<a href="https://github.com/potenday-project/dj_303" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">DJ 303(Chat GPT 음악 추천 서비스)</a>**
+          - Chat GPT API를 활용하여 AI 추천 노래 리스트 활용      
+          - Spring Boot를 활용한 플레이리스트 CRUD API 개발
+          - Pessimistic Lock을 활용한 동시성 문제 해결
           - React를 사용하여 플랫폼 웹 사이트 제작
+          - Docker를 통한 웹 서비스 배포
 
       - layout: top-left
         title: Skill
