--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,10 @@ content:
 
           **<a href="https://github.com/f-lab-edu/hot-deal-moa" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">hot-deal-moa(E-commerce 핫딜 서비스)</a>**
           - Spring Rest Docs를 활용한 테스트 및 API 문서화
-          - Redis Cache를 활용하여 다중서버 로그인 세션 처리
+          - Spring Interceptor 및 Aop를 통한 로그인 세션 자동 체크 처리
+          - Redis Cache를 활용한 다중서버 로그인 세션 처리
           - Redisson 분산락을 활용한 다중서버 환경에서의 동시성 트랜잭션 보장 처리
+          - Spring Scheduler를 통해 쿠폰 기간 만료 갱신 처리
           - Ngrinder를 활용한 성능 개선, 모니터링
             - Nginx 로드밸런싱 및 서버 scale-out 테스트 <mark>3000명</mark> 기준 (TPS 700 -> 9000) 성능 개선
           - QueryDsl 성능 개선
@@ -93,7 +95,7 @@ content:
           - Github Action와 NCP를 활용한 CI/CD 구축
           
           **<a href="https://github.com/potenday-project/dj_303" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">DJ 303(Chat GPT 음악 추천 서비스)</a>**
-          - Chat GPT API를 활용하여 AI 추천 노래 리스트 활용      
+          - Chat GPT API를 활용하여 AI 추천 노래 리스트 활용
           - Spring Boot를 활용한 플레이리스트 CRUD API 개발
           - Pessimistic Lock을 활용한 동시성 문제 해결
           - React를 사용하여 플랫폼 웹 사이트 제작
