--- a/_config.yml
+++ b/_config.yml
@@ -68,13 +68,15 @@ content:
             -  다수의 Migration Script 작성
             -  CC 인증 관련 이슈 다수 처리
             -  Selenium UI 및 Junit로 테스트 코드 작성하여 유닛 테스트 수행
-  - title: Other Experience
+
+  - title: Toy Project
     layout: list
     content:
       - layout: top-left
-        title: Toy Project
+        title: ㅊㅊ
+        sub_title: 이건 어때요? 저건 어때요? 세상 모든 것에 대한 추천을 하는 커뮤니티
+        link: https://github.com/f-lab-edu/chu-chu
         description: | # this will include new lines to allow paragraphs
-          **<a href="https://github.com/f-lab-edu/chu-chu" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">ㅊㅊ(이건 어때요? 저건 어때요? 세상 모든 것에 대한 추천을 하는 커뮤니티)</a>**
           - Spring Boot를 활용한 API 개발
           - Spring Securtiy와 JWT을 통한 사용자 인증 시스템 구현
           - Ngrinder와 VisualVM을 활용한 성능 개선, 모니터링
@@ -82,30 +84,43 @@ content:
             - scale out을 통해 <mark>1000명</mark> 기준 (TPS 1200 → 5000) 성능 개선
           - redis cache(global cache)를 활용한 성능개선
           - Jenkins를 활용한 CI/CD 구축
-           
-          **<a href="https://github.com/f-lab-edu/hot-deal-moa" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">hot-deal-moa(E-commerce 핫딜 서비스)</a>**
+
+      - layout: top-left
+        title: hot-deal-moa
+        sub_title: E-commerce 핫딜 서비스
+        link: https://github.com/f-lab-edu/hot-deal-moa
+        description: | # this will include new lines to allow paragraphs
           - Spring Rest Docs를 활용한 테스트 및 API 문서화
           - Spring Interceptor 및 Aop를 통한 로그인 세션 자동 체크 처리
           - Redis Cache를 활용한 다중서버 로그인 세션 처리
           - Redisson 분산락을 활용한 다중서버 환경에서의 동시성 트랜잭션 보장 처리
           - Spring Scheduler를 통해 쿠폰 기간 만료 갱신 처리
           - Ngrinder를 활용한 성능 개선, 모니터링
-            - Nginx 로드밸런싱 및 서버 scale-out 테스트 <mark>3000명</mark> 기준 (TPS 700 -> 9000) 성능 개선
+          - Nginx 로드밸런싱 및 서버 scale-out 테스트 <mark>3000명</mark> 기준 (TPS 700 -> 9000) 성능 개선
           - QueryDsl 성능 개선
-            - No-offset 쿼리 수정을 통해 <mark>500만건</mark> 기준 (850ms -> 6ms) 성능 개선
+          - No-offset 쿼리 수정을 통해 <mark>500만건</mark> 기준 (850ms -> 6ms) 성능 개선
           - Github Action와 NCP를 활용한 CI/CD 구축
-          
-          
-          **<a href="https://github.com/potenday-project/dj_303" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">DJ 303(Chat GPT 음악 추천 서비스)</a>**
+
+      - layout: top-left
+        title: DJ 303
+        sub_title: Chat GPT 음악 추천 서비스
+        link: https://github.com/potenday-project/dj_303
+        description: | # this will include new lines to allow paragraphs
           - Chat GPT API를 활용하여 AI 추천 노래 리스트 활용
           - Spring Boot & React를 활용하여 플레이리스트 웹 서비스 개발
           - Docker를 통한 자동 웹 서비스 배포
           - Pessimistic Lock을 활용하여 추천 노래 리스트 생성시 발생하는 동시성 문제 해결
 
+      - layout: top-left
+        title: kFanboy
+        sub_title: (K-pop 팬 커뮤니티 플랫폼)
+        link: https://github.com/yht0827/kfanboy
+        description: | # this will include new lines to allow paragraphs
+          -
 
-          **<a href="https://github.com/yht0827/kfanboy" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">K-pop 팬 플랫폼 서비스</a>**
-          - 
-
+  - title: Skill & Other Experience
+    layout: list
+    content:
       - layout: top-left
         title: Skill
         description: | # this will include new lines to allow paragraphs
@@ -114,11 +129,11 @@ content:
           - Spring, Spring MVC, Spring Security
           - Node, Express
           - IntelliJ, WebStorm, Visual Studio Code
-          
+
           **Frontend**
           - JavaScript, Jquery
           - React, HTML, CSS, FreeMarker, Kendo UI
-          
+
           **Infra**
           - Mysql, Postgresql
           - Docker, k8s
@@ -132,10 +147,10 @@ content:
           - SQLD(2018. 10. 02)
           - 정보처리기사(2017. 11. 24)
           - CSTS(2017. 11. 24)
-          
+
           **개발 활동**
           - F-lab 멘티
-          - 비사이드 9기 활동 및 포텐데이 참여 
+          - 비사이드 9기 활동 및 포텐데이 참여
 
   - title: Education
     layout: list
@@ -147,6 +162,7 @@ content:
         quote: >
           서울 소재 대학원
         description: |
+
       - layout: top-left
         title: 가톨릭대학교
         sub_title: 정보통신전자공학, 컴퓨터공학(복수전공)
@@ -160,6 +176,7 @@ content:
           - 한이음 멘토링 프로젝트 (2019.04 ~ 2019.12)
           - 대학교 성적 우수 과목 멘토링 (2017.03 ~ 2017.12)
           - 3D Print & IoT Camp (2016.05)
+
       - layout: top-left
         title: 구리 인창 고등학교
         sub_title: 인문 계열
