--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ content:
 
       - layout: top-left
         title: kFanboy
-        sub_title: (K-pop 팬 커뮤니티 플랫폼)
+        sub_title: K-pop 팬 커뮤니티 플랫폼
         link: https://github.com/yht0827/kfanboy
         description: | # this will include new lines to allow paragraphs
-          -
+          - Github Action과 Dokcer를 활용하여 CI/CD 자동배포 인프라 구축
 
   - title: Skill & Other Experience
     layout: list
