--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ content:
         title: ㅊㅊ
         sub_title: 이건 어때요? 저건 어때요? 세상 모든 것에 대한 추천을 하는 커뮤니티
         link: https://github.com/f-lab-edu/chu-chu
+        link_text: 링크
         description: | # this will include new lines to allow paragraphs
           - Spring Boot를 활용한 API 개발
           - Spring Securtiy와 JWT을 통한 사용자 인증 시스템 구현
@@ -89,6 +90,7 @@ content:
         title: hot-deal-moa
         sub_title: E-commerce 핫딜 서비스
         link: https://github.com/f-lab-edu/hot-deal-moa
+        link_text: 링크
         description: | # this will include new lines to allow paragraphs
           - Spring Rest Docs를 활용한 테스트 및 API 문서화
           - Spring Interceptor 및 Aop를 통한 로그인 세션 자동 체크 처리
@@ -105,6 +107,7 @@ content:
         title: DJ 303
         sub_title: Chat GPT 음악 추천 서비스
         link: https://github.com/potenday-project/dj_303
+        link_text: 링크
         description: | # this will include new lines to allow paragraphs
           - Chat GPT API를 활용하여 AI 추천 노래 리스트 활용
           - Spring Boot & React를 활용하여 플레이리스트 웹 서비스 개발
@@ -115,6 +118,7 @@ content:
         title: kFanboy
         sub_title: K-pop 팬 커뮤니티 플랫폼
         link: https://github.com/yht0827/kfanboy
+        link_text: 링크
         description: | # this will include new lines to allow paragraphs
           - Github Action과 Dokcer를 활용하여 CI/CD 자동배포 인프라 구축
 
