--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ content:
 
           **<a href="https://www.ahnlab.com/ko/product/next-generation-firewall" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">AhnLab TG (차세대 통합 보안 방화벽)</a>**
           - 기능 개발 및 담당 업무
-            - 레거시 프로젝트 개편 (PHP → Java Spring) 
+            - 레거시 프로젝트 개편 (PHP → Java) 
             - 다수의 마이그레이션 스크립트 작성
             - CC 인증 관련 이슈 처리
             - Selenium UI 및 JUnit을 활용한 테스트 코드 작성 및 유닛 테스트 수행 
