--- a/_config.yml
+++ b/_config.yml
@@ -53,10 +53,12 @@ content:
         description: | # this will include new lines to allow paragraphs
           **<a href="https://www.ahnlab.com/ko/product/intrusion-prevention-system" target="_blank" style="color: inherit;font-style: italic;font-weight: 300;">AhnLab AIPS (차세대 네트워크 침입방지 솔루션)</a>** 
           - 기능 개발, 시스템 아키텍처 개선
+            - REST API 설계 (약 50개) 및 일부 구현
             - WebSocket 및 STOMP 프로토콜을 활용하여 웹 경고 메시지 알림 기능 개발
             - Snort 기반의 룰 정책 등록 편의성을 위한 파일 업로드(import) 및 다운로드(export) 기능 구현
             - 보안 인증 서버 외부 연동 및 로그인 처리, 스프링 시큐리티 설정 작업
             - 대용량 정책 데이터 삽입 및 Lucene 인덱스를 통한 로그 파일 조회 성능 개선
+            - 약 50개의 유닛 테스트 코드 작성, BE QA 이슈 0건 발생
           - 운영 이슈 해결 및 장애 대응
             - 펌웨어 업데이트 중 발생한 Out Of Memory로 인한 장비 재시작 오류 문제 처리
             - 장비 내 RDB와 Lucene 인덱스 파일 간의 데이터 동기화(Sync) 오류 문제 해결
