--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,9 @@ content:
         sub_title: K-pop 팬 커뮤니티 플랫폼
         description: | # this will include new lines to allow paragraphs
           - Github Action과 Dokcer를 활용하여 CI/CD 자동배포 인프라 구축
+          - 계층형 무한 대댓글 성능 개선 방식 구현
+          - Lock 기법을 활용하여 선착순 투표 동시성 문제 해결
+          - Ngrinder를 통한 TPS 성능 확인 및 검사
 
   - title: Education
     layout: list
